--- a/result.html
+++ b/result.html
@@ -2,50 +2,126 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Madrasa Noor</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!-- Google Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
+
+  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Custom CSS -->
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      background-color: #f8f9fa;
+      font-family: 'Arvo', serif;
+    }
+
+    .page_404 {
+      padding: 80px 0;
+      background: #fff;
+    }
+
+    .page_404 img {
+      width: 100%;
+    }
+
+    .four_zero_four_bg {
+      background-image: url('https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif');
+      height: 400px;
+      background-position: center;
+    }
+
+    .four_zero_four_bg h1 {
+      font-size: 80px;
+    }
+
+    .contant_box_404 {
+      margin-top: -50px;
+    }
+
+    .link_404 {
+      color: #fff !important;
+      padding: 10px 25px;
+      background: #007bff;
+      margin: 20px 0;
+      display: inline-block;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+
+    .link_404:hover {
+      background: #0056b3;
+    }
+
+    h3.h2 {
+      font-size: 26px;
+      font-weight: bold;
+      color: #343a40;
+    }
+
+    p {
+      color: #6c757d;
+      font-size: 16px;
+    }
+
+    footer {
+      background: #212529;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 60px;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="bg-primary text-white text-center py-4 shadow-sm">
-    <h2 class="mb-0">Examination Results</h2>
-    <p class="mb-0">Check your results online</p>
-  </header>
+<section class="page_404">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <div class="col-sm-10 col-sm-offset-1 text-center">
+          <div class="four_zero_four_bg">
+            <h1 class="text-center">Result</h1>
+          </div>
 
-  <!-- RESULT SECTION -->
-  <section id="result" class="py-5 bg-light">
-    <div class="container text-center">
-      <p class="lead text-muted mb-4">Click the button below to view your examination results.</p>
-      <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec" 
-         target="_blank" 
-         class="btn btn-success btn-lg shadow">
-        <i class="fa-solid fa-graduation-cap me-2"></i> View Results
-      </a>
+          <div class="contant_box_404">
+            <h3 class="h2">Click below to view your examination results</h3>
+            <p>Ensure your roll number is entered correctly.</p>
 
-      <div class="mt-5">
-        <h5 class="fw-bold mb-3">Instructions:</h5>
-        <ul class="list-unstyled text-muted small">
-          <li>✔ Enter your Roll Number correctly.</li>
-          <li>✔ Verify your name and class before downloading.</li>
-          <li>✔ For any issues, contact the Madrasa office.</li>
-        </ul>
-      </div>
+            <!-- ✅ RESULT BUTTON (External Link) -->
+            <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec" 
+               target="_blank" 
+               class="link_404">
+              <i class="fa-solid fa-graduation-cap"></i> View Results
+            </a>
 
-      <!-- Back Button -->
-      <div class="text-center mt-4">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+            <!-- ✅ HOME BUTTON -->
+            <br>
+            <a href="index.html" class="link_404" style="background:#28a745;">
+              <i class="fa-solid fa-house"></i> Go to Home
+            </a>
+          </div>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-4">
-    <small>© 2025 Madrasa Noor | Designed with ❤️ in VS Code</small>
-  </footer>
+<!-- FOOTER -->
+<footer>
+  © 2025 Madrasa Noor | Designed with ❤️ in VS Code
+</footer>
 
 </body>
 </html>
+
+
