--- a/pta.html
+++ b/pta.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parent-Teacher Association - Madrasa Noor</title>
+  <title>Parent-Teacher Association - Noorussalam Madrasa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -22,16 +22,16 @@
       <div class="row justify-content-center mb-5">
         <div class="col-md-8 text-center">
           <p class="lead text-muted">
-            The Parent-Teacher Association (PTA) of <strong>Madrasa Noor</strong> fosters a close relationship 
+            The Parent-Teacher Association (PTA) of <strong>Nooruussalam Madrasa</strong> fosters a close relationship 
             between parents and teachers, ensuring the holistic growth of our students through collaboration, 
             communication, and community involvement.
           </p>
         </div>
       </div>
 
-      <!-- PTA OFFICE BEARERS -->
+      <!-- MANAGEMENT -->
       <div class="text-center mb-4">
-        <h4 class="fw-bold mb-3">PTA Office Bearers (2025)</h4>
+        <h4 class="fw-bold mb-3">Exicutive Members (2025)</h4>
       </div>
       <div class="row g-4 justify-content-center">
 
@@ -39,26 +39,26 @@
         <div class="col-md-4 text-center">
           <div class="card shadow-sm border-0 p-3">
             <img src="https://i.ibb.co/Ks1hsxd/students.jpg" class="rounded-circle mx-auto mb-3" alt="President" width="120" height="120" style="object-fit:cover;">
-            <h6 class="fw-bold">Mr. Abdul Rahman</h6>
-            <small class="text-muted">PTA President</small>
-          </div>
-        </div>
-
-        <!-- Vice President -->
-        <div class="col-md-4 text-center">
-          <div class="card shadow-sm border-0 p-3">
-            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" class="rounded-circle mx-auto mb-3" alt="Vice President" width="120" height="120" style="object-fit:cover;">
-            <h6 class="fw-bold">Mrs. Fathima Noor</h6>
-            <small class="text-muted">Vice President</small>
+            <h6 class="fw-bold">Mr. Abu Mangalath</h6>
+            <small class="text-muted">Madrasa President</small>
           </div>
         </div>
 
         <!-- Secretary -->
         <div class="col-md-4 text-center">
           <div class="card shadow-sm border-0 p-3">
+            <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" class="rounded-circle mx-auto mb-3" alt="Vice President" width="120" height="120" style="object-fit:cover;">
+            <h6 class="fw-bold">Mr. Fairoosudheen P</h6>
+            <small class="text-muted">Vice President</small>
+          </div>
+        </div>
+
+        <!-- Treasurer -->
+        <div class="col-md-4 text-center">
+          <div class="card shadow-sm border-0 p-3">
             <img src="https://i.ibb.co/5KGtvHw/library.jpg" class="rounded-circle mx-auto mb-3" alt="Secretary" width="120" height="120" style="object-fit:cover;">
-            <h6 class="fw-bold">Ustadh Hamza</h6>
-            <small class="text-muted">Secretary</small>
+            <h6 class="fw-bold">Mr.Saif Saleem P</h6>
+            <small class="text-muted">Treasurer</small>
           </div>
         </div>
       </div>
@@ -97,8 +97,9 @@
 
   <!-- FOOTER -->
   <footer class="bg-dark text-white text-center py-3 mt-4">
-    <small>© 2025 Madrasa Noor | Designed with ❤️ in S Code</small>
+    <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
   </footer>
 
 </body>
 </html>
+
