--- a/pta.html
+++ b/pta.html
@@ -39,8 +39,8 @@
         <div class="col-md-4 text-center">
           <div class="card shadow-sm border-0 p-3">
             <img src="https://i.ibb.co/Ks1hsxd/students.jpg" class="rounded-circle mx-auto mb-3" alt="President" width="120" height="120" style="object-fit:cover;">
-            <h6 class="fw-bold">Mr. Abu Mangalath</h6>
-            <small class="text-muted">Madrasa President</small>
+            <h6 class="fw-bold">Mr. Abdu Mangalath</h6>
+            <small class="text-muted"> President</small>
           </div>
         </div>
 
@@ -102,4 +102,5 @@
 
 </body>
 </html>
+
 
