--- a/pta.html
+++ b/pta.html
@@ -31,7 +31,7 @@
 
       <!-- MANAGEMENT -->
       <div class="text-center mb-4">
-        <h4 class="fw-bold mb-3">Exicutive Members (2025)</h4>
+        <h4 class="fw-bold mb-3">Exicutive Members (2025-26)</h4>
       </div>
       <div class="row g-4 justify-content-center">
 
@@ -102,5 +102,6 @@
 
 </body>
 </html>
+
 
 
