--- a/result.html
+++ b/result.html
@@ -2,126 +2,85 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Results - Madrasa Noor</title>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-
-  <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
-  <!-- Custom CSS -->
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      background-color: #f8f9fa;
-      font-family: 'Arvo', serif;
+      background: linear-gradient(135deg, #0b5ed7, #0d6efd);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-family: 'Rubik', sans-serif;
     }
 
-    .page_404 {
-      padding: 80px 0;
+    .result-box {
       background: #fff;
+      color: #333;
+      border-radius: 15px;
+      padding: 40px;
+      text-align: center;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+      max-width: 500px;
+      width: 90%;
     }
 
-    .page_404 img {
-      width: 100%;
+    .result-box h1 {
+      font-weight: 700;
+      margin-bottom: 10px;
+      color: #0b5ed7;
     }
 
-    .four_zero_four_bg {
-      background-image: url('https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif');
-      height: 400px;
-      background-position: center;
-    }
-
-    .four_zero_four_bg h1 {
-      font-size: 80px;
-    }
-
-    .contant_box_404 {
-      margin-top: -50px;
-    }
-
-    .link_404 {
-      color: #fff !important;
-      padding: 10px 25px;
-      background: #007bff;
-      margin: 20px 0;
-      display: inline-block;
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background 0.3s ease;
-    }
-
-    .link_404:hover {
-      background: #0056b3;
-    }
-
-    h3.h2 {
-      font-size: 26px;
-      font-weight: bold;
-      color: #343a40;
-    }
-
-    p {
+    .result-box p {
       color: #6c757d;
-      font-size: 16px;
+      margin-bottom: 25px;
+    }
+
+    .btn-success {
+      border-radius: 8px;
+      padding: 12px 28px;
+      font-size: 1.1rem;
+      font-weight: 600;
+    }
+
+    .btn-success:hover {
+      transform: translateY(-3px);
+      transition: 0.3s ease;
+      box-shadow: 0 6px 12px rgba(25, 135, 84, 0.3);
     }
 
     footer {
-      background: #212529;
-      color: white;
+      position: absolute;
+      bottom: 15px;
+      width: 100%;
       text-align: center;
-      padding: 15px 0;
-      margin-top: 60px;
+      color: rgba(255, 255, 255, 0.8);
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
 
-<section class="page_404">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12 text-center">
-        <div class="col-sm-10 col-sm-offset-1 text-center">
-          <div class="four_zero_four_bg">
-            <h1 class="text-center">Result</h1>
-          </div>
+  <div class="result-box">
+    <h1>Examination Results</h1>
+    <p>Click below to view your latest examination results.</p>
 
-          <div class="contant_box_404">
-            <h3 class="h2">Click below to view your examination results</h3>
-            <p>Ensure your roll number is entered correctly.</p>
-
-            <!-- ✅ RESULT BUTTON (External Link) -->
-            <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec" 
-               target="_blank" 
-               class="link_404">
-              <i class="fa-solid fa-graduation-cap"></i> View Results
-            </a>
-
-            <!-- ✅ HOME BUTTON -->
-            <br>
-            <a href="index.html" class="link_404" style="background:#28a745;">
-              <i class="fa-solid fa-house"></i> Go to Home
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec" 
+       class="btn btn-success btn-lg" 
+       target="_blank">
+       <i class="fa-solid fa-graduation-cap me-2"></i> View Results
+    </a>
   </div>
-</section>
 
-<!-- FOOTER -->
-<footer>
-  © 2025 Madrasa Noor | Designed with ❤️ in VS Code
-</footer>
+  <footer>© 2025 Madrasa Noor | All Rights Reserved</footer>
 
 </body>
 </html>
-
-
