--- a/result.html
+++ b/result.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Results - Madrasa Noor</title>
+  <title>Results - Noorussalam Madrasa</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
 <body>
 
   <div class="result-box">
-    <h1>Examination Results</h1>
+    <h1>Final Examination Result 2025-26</h1>
     <p>Click below to view your latest examination results.</p>
 
     <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec" 
@@ -80,7 +80,8 @@
     </a>
   </div>
 
-  <footer>© 2025 Madrasa Noor | All Rights Reserved</footer>
+  <footer>© 2025 Noorussalam Madrasa | All Rights Reserved</footer>
 
 </body>
 </html>
+
