--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="d-flex flex-wrap gap-2">
           <a href="#admissions" class="btn btn-primary btn-lg">Join Admissions</a>
           <a href="#about" class="btn btn-outline-secondary btn-lg">Learn More</a>
-          <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec" class="btn btn-success btn-lg" target="_blank">View Results</a>
+          <a href="result.html" class="btn btn-success btn-lg" target="_blank">View Results</a>
         </div>
       </div>
       <div class="col-lg-5 d-none d-lg-block">
@@ -132,7 +132,7 @@
           <div class="fw-bold text-primary">Result Published</div>
           <small class="text-muted">Click below to check your results online.</small>
         </div>
-        <a href="https://script.google.com/macros/s/AKfycbxPzVhgM8y-WAF50hI1-YA5C_yrPCG4O2rx7P-0JWfSfNqK5kRXodpd8MycalZXZF-n-A/exec"
+        <a href="result.html"
            class="btn btn-outline-success btn-sm" target="_blank">View Result</a>
       </a>
     </div>
@@ -160,3 +160,4 @@
 </script>
 </body>
 </html>
+
