--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         <div class="d-flex flex-wrap gap-2">
           <a href="#admissions" class="btn btn-primary btn-lg">Join Admissions</a>
           <a href="#about" class="btn btn-outline-secondary btn-lg">Learn More</a>
-          <a href="result.html" class="btn btn-success btn-lg" target="_blank">View Results</a>
         </div>
       </div>
       <div class="col-lg-5 d-none d-lg-block">
@@ -115,7 +114,7 @@
 
       <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
         <div>
-          <div class="fw-bold text-primary">Annual Day Celebration</div>
+          <div class="fw-bold text-primary">Meelad Day Celebration</div>
           <small class="text-muted">December 20, 2025 — All parents and guardians are invited.</small>
         </div>
       </a>
@@ -132,7 +131,7 @@
           <div class="fw-bold text-primary">Result Published</div>
           <small class="text-muted">Click below to check your results online.</small>
         </div>
-        <a href="result.html"
+        <a href="#admissions"
            class="btn btn-outline-success btn-sm" target="_blank">View Result</a>
       </a>
     </div>
@@ -160,4 +159,5 @@
 </script>
 </body>
 </html>
+
 
