Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 .</p>
       </div>
       <div class="col-md-6">
-        <img src="https://images.unsplash.com/photo-1596496053604-1f39a271826c?auto=format&fit=crop&w=1000&q=60" alt="students" class="img-fluid rounded shadow-sm">
+        <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid rounded shadow-sm">
       </div>
     </div>
   </div>
@@ -159,5 +159,6 @@
 </script>
 </body>
 </html>
+
 
 
