--- a/index.html
+++ b/index.html
@@ -93,6 +93,108 @@
     </div>
   </div>
 </section>
+<!-- LATEST NEWS SECTION -->
+<section id="news" class="py-5 bg-light">
+  <div class="container text-center">
+    <h3 class="fw-bold mb-3">Latest News</h3>
+    <p class="text-muted mb-5">Stay updated with the latest events and announcements</p>
+
+    <div id="newsCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+
+        <!-- Slide 1 -->
+        <div class="carousel-item active">
+          <div class="row justify-content-center">
+            
+            <div class="col-md-4 mb-3">
+              <div class="card news-card shadow-sm">
+                <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 1">
+                <div class="card-body">
+                  <h5 class="card-title">Admission Open 2025</h5>
+                  <p class="card-text">Applications are now open for new admissions. Enroll your child today!</p>
+                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <div class="card news-card shadow-sm">
+                <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 2">
+                <div class="card-body">
+                  <h5 class="card-title">Annual Day Celebration</h5>
+                  <p class="card-text">Join us for our grand Annual Day program on 15th November 2025.</p>
+                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <div class="card news-card shadow-sm">
+                <img src="https://images.unsplash.com/photo-1571260899304-425eee4c7efc?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 3">
+                <div class="card-body">
+                  <h5 class="card-title">Result Announced</h5>
+                  <p class="card-text">Check out the academic results of 2024–25 session — congratulations to all!</p>
+                  <a href="result.html" class="btn btn-outline-primary btn-sm">View Results</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="carousel-item">
+          <div class="row justify-content-center">
+            
+            <div class="col-md-4 mb-3">
+              <div class="card news-card shadow-sm">
+                <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 4">
+                <div class="card-body">
+                  <h5 class="card-title">PTA Meeting</h5>
+                  <p class="card-text">Parents are invited for the monthly PTA meeting scheduled next week.</p>
+                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <div class="card news-card shadow-sm">
+                <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 5">
+                <div class="card-body">
+                  <h5 class="card-title">Science Fair</h5>
+                  <p class="card-text">Students will present innovative projects at the Science Fair 2025.</p>
+                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <div class="card news-card shadow-sm">
+                <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 6">
+                <div class="card-body">
+                  <h5 class="card-title">Holiday Notice</h5>
+                  <p class="card-text">The Madrasa will remain closed from 25th to 29th October for Eid Holidays.</p>
+                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Controls -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#newsCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#newsCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+
+    </div>
+  </div>
+</section>
 
 <!-- NOTIFICATIONS -->
 <section id="notifications" class="py-5 bg-light">
@@ -159,6 +261,7 @@
 </script>
 </body>
 </html>
+
 
 
 
