--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 1">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 1">
                 <div class="card-body">
                   <h5 class="card-title">Admission Open 2025</h5>
                   <p class="card-text">Applications are now open for new admissions. Enroll your child today!</p>
@@ -119,7 +119,7 @@
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 2">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 2">
                 <div class="card-body">
                   <h5 class="card-title">Annual Day Celebration</h5>
                   <p class="card-text">Join us for our grand Annual Day program on 15th November 2025.</p>
@@ -130,7 +130,7 @@
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://images.unsplash.com/photo-1571260899304-425eee4c7efc?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 3">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 3">
                 <div class="card-body">
                   <h5 class="card-title">Result Announced</h5>
                   <p class="card-text">Check out the academic results of 2024–25 session — congratulations to all!</p>
@@ -148,7 +148,7 @@
             
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 4">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 4">
                 <div class="card-body">
                   <h5 class="card-title">PTA Meeting</h5>
                   <p class="card-text">Parents are invited for the monthly PTA meeting scheduled next week.</p>
@@ -159,7 +159,7 @@
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 5">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 5">
                 <div class="card-body">
                   <h5 class="card-title">Science Fair</h5>
                   <p class="card-text">Students will present innovative projects at the Science Fair 2025.</p>
@@ -170,7 +170,7 @@
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?auto=format&fit=crop&w=600&q=60" class="card-img-top" alt="News 6">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 6">
                 <div class="card-body">
                   <h5 class="card-title">Holiday Notice</h5>
                   <p class="card-text">The Madrasa will remain closed from 25th to 29th October for Eid Holidays.</p>
@@ -261,6 +261,7 @@
 </script>
 </body>
 </html>
+
 
 
 
