--- a/pta.html
+++ b/pta.html
@@ -49,7 +49,7 @@
           <div class="card shadow-sm border-0 p-3">
             <img src="https://i.ibb.co/xGZhMJD/madrasa-event.jpg" class="rounded-circle mx-auto mb-3" alt="Vice President" width="120" height="120" style="object-fit:cover;">
             <h6 class="fw-bold">Mr. Fairoosudheen P</h6>
-            <small class="text-muted">Vice President</small>
+            <small class="text-muted">Gen. Secretary</small>
           </div>
         </div>
 
@@ -102,6 +102,7 @@
 
 </body>
 </html>
+
 
 
 
