Enhance result page with navigation and layout
Added a back to home button and improved layout.

--- a/result.html
+++ b/result.html
@@ -79,9 +79,15 @@
        <i class="fa-solid fa-graduation-cap me-2"></i> View Results
     </a>
   </div>
-
+  <!-- BACK TO HOME -->
+      <div class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+      </div>
+    </div>
+  </section>
   <footer>© 2025 Noorussalam Madrasa | All Rights Reserved</footer>
 
 </body>
 </html>
+
 
