Fix executive member images and spelling
Updated executive member images and corrected spelling of 'Executive'.

--- a/pta.html
+++ b/pta.html
@@ -38,7 +38,7 @@
         <!-- President -->
         <div class="col-md-4 text-center">
           <div class="card shadow-sm border-0 p-3">
-            <img src="https://i.ibb.co/Ks1hsxd/students.jpg" class="rounded-circle mx-auto mb-3" alt="President" width="120" height="120" style="object-fit:cover;">
+            <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" class="rounded-circle mx-auto mb-3" alt="President" width="120" height="120" style="object-fit:cover;">
             <h6 class="fw-bold">Mr. Abdu Mangalath</h6>
             <small class="text-muted"> President</small>
           </div>
@@ -56,7 +56,7 @@
         <!-- Treasurer -->
         <div class="col-md-4 text-center">
           <div class="card shadow-sm border-0 p-3">
-            <img src="https://i.ibb.co/5KGtvHw/library.jpg" class="rounded-circle mx-auto mb-3" alt="Secretary" width="120" height="120" style="object-fit:cover;">
+            <img src="https://i.ibb.co/PZbJ5KM9/saleem-1.jpg" class="rounded-circle mx-auto mb-3" alt="Secretary" width="120" height="120" style="object-fit:cover;">
             <h6 class="fw-bold">Mr.Saif Saleem P</h6>
             <small class="text-muted">Treasurer</small>
           </div>
@@ -102,6 +102,7 @@
 
 </body>
 </html>
+
 
 
 
