--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <div class="fw-bold text-primary">Result Published</div>
           <small class="text-muted">Click below to check your results online.</small>
         </div>
-        <a href="#admissions"
+        <a href="result.html"
            class="btn btn-outline-success btn-sm" target="_blank">View Result</a>
       </a>
     </div>
@@ -261,6 +261,7 @@
 </script>
 </body>
 </html>
+
 
 
 
