--- a/faculties.html
+++ b/faculties.html
@@ -22,7 +22,7 @@
 
         <!-- Faculty Member 1 -->
         <div class="col-6 col-md-4 col-lg-3 text-center">
-          <img src="https://i.ibb.co/SQ1TQMR/madrasa-class.jpg" alt="Teacher 1" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
+          <img src="https://i.ibb.co/S77QvZ07/Whats-App-Image-2025-10-25-at-8-38-50-AM.jpg" alt="Teacher 1" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
           <h6 class="fw-bold mt-2">SUHAIL P</h6>
           <small class="text-muted d-block">SWADAR MU'ALLIM</small>
           <small class="text-muted d-block">7034678818</small>
@@ -30,8 +30,8 @@
 
         <!-- Faculty Member 2 -->
         <div class="col-6 col-md-4 col-lg-3 text-center">
-          <img src="https://i.ibb.co/Ks1hsxd/students.jpg" alt="Teacher 2" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
-          <h6 class="fw-bold mt-2">FIROS FAIZY</h6>
+          <img src="https://i.ibb.co/3mXsbSdg/Whats-App-Image-2025-10-25-at-8-37-28-AM.jpg" alt="Teacher 2" class="img-fluid rounded-circle shadow-sm mb-2" style="width:150px; height:150px; object-fit:cover;">
+          <h6 class="fw-bold mt-2">FIROS FAIZY AK</h6>
           <small class="text-muted d-block">TEACHER</small>
           <small class="text-muted d-block">9645134854</small>
         </div>
@@ -70,3 +70,4 @@
 
 </body>
 </html>
+
