--- a/index.html
+++ b/index.html
@@ -106,16 +106,15 @@
         <div class="carousel-item active">
           <div class="row justify-content-center">
             
-            <div class="col-md-4 mb-3">
+             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 1">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 3">
                 <div class="card-body">
-                  <h5 class="card-title">Admission Open 2025</h5>
-                  <p class="card-text">Applications are now open for new admissions. Enroll your child today!</p>
-                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+                  <h5 class="card-title">വാര്‍ഷിക പരീക്ഷ ഫലം പ്രഖ്യാപിച്ചു</h5>
+                  <p class="card-text">Check out the academic results of 2025–26 session — congratulations to all!</p>
+                  <a href="result.html" class="btn btn-outline-primary btn-sm">View Results</a>
                 </div>
               </div>
-            </div>
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
@@ -132,8 +131,8 @@
               <div class="card news-card shadow-sm">
                 <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 3">
                 <div class="card-body">
-                  <h5 class="card-title">Result Announced</h5>
-                  <p class="card-text">Check out the academic results of 2024–25 session — congratulations to all!</p>
+                  <h5 class="card-title">വാര്‍ഷിക പരീക്ഷ ഫലം പ്രഖ്യാപിച്ചു</h5>
+                  <p class="card-text">Check out the academic results of 2025–26 session — congratulations to all!</p>
                   <a href="result.html" class="btn btn-outline-primary btn-sm">View Results</a>
                 </div>
               </div>
@@ -261,6 +260,7 @@
 </script>
 </body>
 </html>
+
 
 
 
