--- a/index.html
+++ b/index.html
@@ -108,13 +108,14 @@
             
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
-                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 3">
+                <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 1">
                 <div class="card-body">
-                 <h5 class="card-title">വാര്‍ഷിക പരീക്ഷ ഫലം പ്രഖ്യാപിച്ചു</h5>
-                 <p class="card-text">Check out the academic results of 2025–26 session — congratulations to all!</p>
-                 <a href="result.html" class="btn btn-outline-primary btn-sm">View Results</a>
+                  <h5 class="card-title">Admission Open 2025</h5>
+                  <p class="card-text">Applications are now open for new admissions. Enroll your child today!</p>
+                  <a href="#" class="btn btn-outline-primary btn-sm">Read More</a>
+                </div>
               </div>
-             </div>
+            </div>
 
             <div class="col-md-4 mb-3">
               <div class="card news-card shadow-sm">
@@ -131,8 +132,8 @@
               <div class="card news-card shadow-sm">
                 <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" class="card-img-top" alt="News 3">
                 <div class="card-body">
-                  <h5 class="card-title">വാര്‍ഷിക പരീക്ഷ ഫലം പ്രഖ്യാപിച്ചു</h5>
-                  <p class="card-text">Check out the academic results of 2025–26 session — congratulations to all!</p>
+                  <h5 class="card-title">Result Announced</h5>
+                  <p class="card-text">Check out the academic results of 2024–25 session — congratulations to all!</p>
                   <a href="result.html" class="btn btn-outline-primary btn-sm">View Results</a>
                 </div>
               </div>
@@ -244,15 +245,22 @@
 <!-- (Other sections like Courses, Admissions, Events, Gallery, Contact remain same) -->
 
 <!-- FOOTER -->
-<footer class="py-4">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div>
-      <strong>NOORUSSALAM MADRASA</strong>
-      <div class="small text-muted">© <span id="year"></span> All rights reserved.</div>
+<footer class="footer py-4">
+  <div class="container text-center">
+    <strong class="text-uppercase d-block">Noorussalam Madrasa</strong>
+    <small class="text-muted d-block">© <span id="year"></span> All rights reserved.</small>
+    <div class="text-muted small mt-2">
+      Hosted by <strong>Suhail Kerala</strong> • 
+      Contact: <a href="mailto:noorussalam6110@gmail.com" class="text-decoration-none text-reset">noorussalam6110@gmail.com</a>
     </div>
-    <div class="small text-muted">hosted by suhail kerala • Contact:noorussalam6110@gmail.com</div>
   </div>
 </footer>
+
+<script>
+  // Auto update year
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
@@ -260,9 +268,6 @@
 </script>
 </body>
 </html>
-
-
-
 
 
 
