--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
 <footer class="footer py-4">
   <div class="container text-center">
     <strong class="text-uppercase d-block">Noorussalam Madrasa</strong>
-    <small class="text-muted d-block">© <span id="year"></span> All rights reserved.</small>
-    <div class="text-muted small mt-2">
+    <small class="d-block">© <span id="year"></span> All rights reserved.</small>
+    <div class="mt-2">
       Hosted by <strong>Suhail Kerala</strong> • 
-      Contact: <a href="mailto:noorussalam6110@gmail.com" class="text-decoration-none text-reset">noorussalam6110@gmail.com</a>
+      Contact: <a href="mailto:noorussalam6110@gmail.com" class="text-decoration-none">noorussalam6110@gmail.com</a>
     </div>
   </div>
 </footer>
@@ -262,12 +262,14 @@
 </script>
 
 
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
 
 
