--- a/forms.html
+++ b/forms.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Madrasa — Forms & Applications</title>
-  <!-- Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     :root{--accent:#0b5ed7}
@@ -30,6 +29,7 @@
         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
         <li class="nav-item"><a class="nav-link active" href="#forms">Forms</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="admin.html">Admin</a></li>
       </ul>
     </div>
   </div>
@@ -53,14 +53,11 @@
 <main class="container my-5" id="forms">
   <div class="two-col">
 
-    <!-- Left column: forms -->
     <div>
-
       <!-- Admission Application -->
       <section class="card p-4 mb-4 form-section" id="admission">
         <h3 class="mb-3">Admission Application</h3>
         <p class="note">Fill all required fields. After submission, you'll receive a reference number via email (if provided).</p>
-
         <form id="admissionForm" novalidate>
           <div class="row g-3">
             <div class="col-md-6">
@@ -68,18 +65,14 @@
               <input type="text" class="form-control" name="fullName" required>
               <div class="invalid-feedback">Please enter student's full name.</div>
             </div>
-
             <div class="col-md-6">
               <label class="form-label">Preferred Name</label>
               <input type="text" class="form-control" name="preferredName">
             </div>
-
             <div class="col-md-4">
               <label class="form-label required">Date of Birth</label>
               <input type="date" class="form-control" name="dob" required>
-              <div class="invalid-feedback">Please select date of birth.</div>
             </div>
-
             <div class="col-md-4">
               <label class="form-label required">Gender</label>
               <select class="form-select" name="gender" required>
@@ -89,44 +82,22 @@
                 <option>Other</option>
               </select>
             </div>
-
             <div class="col-md-4">
               <label class="form-label required">Applying For Class / Level</label>
               <input type="text" class="form-control" name="classLevel" required placeholder="e.g., Primary / Hifz / Tajweed">
             </div>
-
             <div class="col-md-6">
               <label class="form-label required">Parent / Guardian Name</label>
               <input type="text" class="form-control" name="guardianName" required>
             </div>
-
             <div class="col-md-6">
               <label class="form-label required">Contact Number</label>
               <input type="tel" class="form-control" name="phone" pattern="[0-9+\- ]{7,20}" required>
-              <div class="form-text">Include country code if outside India (e.g., +91-1234567890)</div>
             </div>
-
             <div class="col-12">
               <label class="form-label required">Address</label>
               <textarea class="form-control" rows="2" name="address" required></textarea>
             </div>
-
-            <div class="col-md-6">
-              <label class="form-label">Upload Birth Certificate (PDF/JPG) — optional</label>
-              <input class="form-control" type="file" name="birthCert" accept="application/pdf,image/*">
-              <div class="form-text">Max 5 MB.</div>
-            </div>
-
-            <div class="col-md-6">
-              <label class="form-label">Preferred Start Date</label>
-              <input type="date" class="form-control" name="startDate">
-            </div>
-
-            <div class="col-12">
-              <label class="form-label">Additional Notes (health, previous schooling, etc.)</label>
-              <textarea class="form-control" rows="3" name="notes"></textarea>
-            </div>
-
             <div class="col-12 d-flex gap-2">
               <button type="submit" class="btn btn-primary">Submit Application</button>
               <button type="reset" class="btn btn-outline-secondary">Reset</button>
@@ -134,115 +105,20 @@
           </div>
         </form>
       </section>
-
-      <!-- Certificate Request -->
-      <section class="card p-4 mb-4 form-section" id="certificate">
-        <h3 class="mb-3">Certificate / Document Request</h3>
-        <form id="certificateForm" novalidate>
-          <div class="row g-3">
-            <div class="col-md-6">
-              <label class="form-label required">Full Name</label>
-              <input class="form-control" name="name" required>
-            </div>
-            <div class="col-md-6">
-              <label class="form-label required">Relation / Student ID</label>
-              <input class="form-control" name="studentId" required>
-            </div>
-            <div class="col-12">
-              <label class="form-label required">Type of Document</label>
-              <select class="form-select" name="docType" required>
-                <option value="">Choose...</option>
-                <option>Transfer Certificate</option>
-                <option>Bonafide Certificate</option>
-                <option>Study Certificate</option>
-                <option>Others</option>
-              </select>
-            </div>
-            <div class="col-12">
-              <label class="form-label">Purpose / Notes</label>
-              <textarea class="form-control" name="purpose" rows="2"></textarea>
-            </div>
-            <div class="col-12 d-flex gap-2">
-              <button type="submit" class="btn btn-primary">Request Document</button>
-              <button type="reset" class="btn btn-outline-secondary">Reset</button>
-            </div>
-          </div>
-        </form>
-      </section>
-
-      <!-- Leave / Permission Letter -->
-      <section class="card p-4 mb-4 form-section" id="leave">
-        <h3 class="mb-3">Leave / Permission</h3>
-        <form id="leaveForm" novalidate>
-          <div class="row g-3">
-            <div class="col-md-6">
-              <label class="form-label required">Student Name</label>
-              <input class="form-control" name="studentName" required>
-            </div>
-            <div class="col-md-6">
-              <label class="form-label required">Class / Section</label>
-              <input class="form-control" name="classSection" required>
-            </div>
-            <div class="col-md-6">
-              <label class="form-label required">From</label>
-              <input type="date" class="form-control" name="fromDate" required>
-            </div>
-            <div class="col-md-6">
-              <label class="form-label required">To</label>
-              <input type="date" class="form-control" name="toDate" required>
-            </div>
-            <div class="col-12">
-              <label class="form-label required">Reason</label>
-              <textarea class="form-control" name="reason" rows="3" required></textarea>
-            </div>
-            <div class="col-12 d-flex gap-2">
-              <button type="submit" class="btn btn-primary">Send Leave Request</button>
-              <button type="reset" class="btn btn-outline-secondary">Reset</button>
-            </div>
-          </div>
-        </form>
-      </section>
-
     </div>
 
-    <!-- Right column: info card -->
     <aside>
       <div class="card p-4 sticky-top">
         <h5>How it works</h5>
         <ol>
           <li>Fill the form and click <strong>Submit</strong>.</li>
-          <li>You will see a confirmation message with a reference number.</li>
-          <li>Office will contact you for verification or fees (if required).</li>
+          <li>Your submission will be saved and can be searched in <strong>Admin Page</strong>.</li>
         </ol>
-        <hr>
-        <h6>Helpful links</h6>
-        <ul class="list-unstyled">
-          <li><a href="#admission">Admission Application</a></li>
-          <li><a href="#certificate">Certificate Request</a></li>
-          <li><a href="#leave">Leave / Permission</a></li>
-        </ul>
-        <hr>
-        <p class="mb-0"><strong>Office hours:</strong><br>Mon–Sat, 9:00 AM — 3:00 PM</p>
-        <p class="mb-0"><strong>Phone:</strong> +91-xxxxxxxxxx</p>
-        <p class="mb-0"><strong>Email:</strong> office@noorussalam.example</p>
       </div>
     </aside>
 
   </div>
 </main>
-
-<!-- Success Modal -->
-<div class="modal fade" id="successModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-body p-4 text-center">
-        <h5 class="mb-2">Submission Received</h5>
-        <p class="mb-3">Thank you. Your application/reference number is <strong id="refNum">#XXXX</strong>.</p>
-        <button class="btn btn-primary" data-bs-dismiss="modal">OK</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 <footer class="bg-white py-4 mt-5 border-top">
   <div class="container text-center small text-muted">© <span id="year"></span> Noorussalam Madrasa — All rights reserved.</div>
@@ -250,47 +126,29 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  // Auto year
   document.getElementById('year').textContent = new Date().getFullYear();
 
-  // Simple client-side handling for demo — replace with server endpoints
-  function handleForm(form, modalRefText){
-    form.addEventListener('submit', function(e){
-      e.preventDefault();
-      if(!form.checkValidity()){
-        form.classList.add('was-validated');
-        return;
-      }
-      // Normally: send data via fetch() to server endpoint (e.g., /api/apply)
-      // Here: simulate success and show modal with random ref number
-      const ref = 'NM' + Math.floor(100000 + Math.random()*900000);
-      document.getElementById('refNum').textContent = ref;
-      const modal = new bootstrap.Modal(document.getElementById('successModal'));
-      modal.show();
-      form.reset();
-      form.classList.remove('was-validated');
+  const admissionForm = document.getElementById('admissionForm');
+  admissionForm.addEventListener('submit', function(e){
+    e.preventDefault();
+    if(!admissionForm.checkValidity()){
+      admissionForm.classList.add('was-validated');
+      return;
+    }
+    // Save to localStorage
+    const submissions = JSON.parse(localStorage.getItem('madrasaSubmissions') || '[]');
+    submissions.push({
+      formType: 'Admission',
+      name: admissionForm.elements['fullName'].value,
+      classLevel: admissionForm.elements['classLevel'].value,
+      phone: admissionForm.elements['phone'].value,
+      date: new Date()
     });
-  }
-
-  // Attach handlers
-  handleForm(document.getElementById('admissionForm'));
-  handleForm(document.getElementById('certificateForm'));
-  handleForm(document.getElementById('leaveForm'));
-
-  // Accessibility: focus modal OK button when shown
-  const successModalEl = document.getElementById('successModal');
-  successModalEl.addEventListener('shown.bs.modal', function(){
-    successModalEl.querySelector('.btn').focus();
+    localStorage.setItem('madrasaSubmissions', JSON.stringify(submissions));
+    alert('Submission saved! You can view it in Admin Page.');
+    admissionForm.reset();
+    admissionForm.classList.remove('was-validated');
   });
-
-  /*
-    Implementation notes for developers:
-    - Replace the simulated submit handler with a fetch() POST to your backend, e.g.
-      fetch('/api/forms/admission', { method: 'POST', body: formData })
-    - For file uploads, use FormData and set server to accept multipart/form-data.
-    - Validate and sanitize input on server-side as well.
-    - Consider adding CAPTCHA or email verification to avoid spam.
-  */
 </script>
 </body>
 </html>
