--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
         <li class="nav-item"><a class="nav-link" href="forms.html" target="_blank">Forms&Applications</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
-<li class="nav-item">
-  <a class="nav-link" href="result.html" target="_blank">Result</a>
-</li>
+        <li class="nav-item"><a class="nav-link" href="result.html" target="_blank">Result</a></li>
         <li class="nav-item"><a class="nav-link" href="pta.html" target="_blank">PTA</a></li>
-
       </ul>
-      <a href="#admissions" class="btn btn-primary ms-lg-3">Apply Now</a>
+      <a href="forms.html" class="btn btn-primary ms-lg-3">Apply Now</a>
     </div>
   </div>
 </nav>
@@ -53,7 +50,7 @@
         <h1 class="display-6 fw-bold">Noorussalam Madrasa — Knowledge, Character & Service</h1>
         <p class="lead text-muted">Combining traditional Islamic studies with modern subjects to prepare students for today and tomorrow.</p>
         <div class="d-flex flex-wrap gap-2">
-          <a href="#admissions" class="btn btn-primary btn-lg">Join Admissions</a>
+          <a href="forms.html" class="btn btn-primary btn-lg">Join Admissions</a>
           <a href="#about" class="btn btn-outline-secondary btn-lg">Learn More</a>
         </div>
       </div>
@@ -270,6 +267,7 @@
 </script>
 </body>
 </html>
+
 
 
 
