--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff/Muallims</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">id card</a></li>
         <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
         <li class="nav-item"><a class="nav-link" href="result.html" target="_blank">Result</a></li>
         <li class="nav-item"><a class="nav-link" href="pta.html" target="_blank">PTA</a></li>
@@ -266,6 +267,7 @@
 </script>
 </body>
 </html>
+
 
 
 
