--- a/idcard.html
+++ b/idcard.html
@@ -72,7 +72,7 @@
         <label class="form-label">Roll Number</label>
         <input type="text" name="roll" class="form-control" placeholder="Enter Roll Number" required>
       </div>
-      <button type="submit">Generate ID Card</button>
+      <button type="submit">Generate Digital ID Card</button>
     </form>
   </div>
 
@@ -174,6 +174,7 @@
                   <div class="id-body">
                     <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" alt="Student Photo" class="id-photo">
                     <h5>${s.FullName}</h5>
+                    <p class="academic-year">Academic Year: 2025–26</p>
                     <p><strong>UID:</strong> ${s.UID}</p>
                     <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
                     <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
