--- a/idcard.html
+++ b/idcard.html
@@ -201,6 +201,19 @@
           newWin.document.write("<h3 style='color:red;text-align:center;'>Error fetching data.</h3>");
         });
     });
+          <!-- BACK TO HOME -->
+      <div class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="bg-dark text-white text-center py-3 mt-4">
+    <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
+  </footer>
+
   </script>
 </body>
 </html>
+
